--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -53,6 +53,7 @@
   &__button
     position: absolute
     min-width: 65px
+    max-width: 100px
     top: 0
     right: 0
     height: 100%
